[package]
name = "boobar"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
clap = { version = "4", features = ["derive"] }
gtk4 = { version = "0.7", features = ["v4_6"] }
gtk4-layer-shell = "0.2.0"
gdk4 = "0.7"
gdk4-x11 = "0.7"
x11 = "2.21.0"
glib = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
# mlua = { version = "0.10", features = ["lua54", "serialize"] }
rhai = "1.17"